// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Field />  should render its css w/ props align 1`] = `
<FlexBox
  direction="column"
>
  <Field__Input
    align="right"
    placeholder="placeholder"
    theme={
      Object {
        "radius": Object {
          "searchBox": "100px",
        },
      }
    }
    type="text"
  />
</FlexBox>
`;

exports[`<Field />  should render its css w/ props note 1`] = `
<FlexBox
  direction="column"
>
  <Field__Input
    note={true}
    placeholder="placeholder"
    theme={
      Object {
        "radius": Object {
          "searchBox": "100px",
        },
      }
    }
    type="text"
  />
</FlexBox>
`;

exports[`<Input /> should render its css w/ props align 1`] = `
.c0 {
  display: block;
  box-sizing: border-box;
  width: 100%;
  text-align: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 6px 13px;
  border: 1px solid;
  background-color: rgb(255,255,255);
}

.c0::-webkit-input-placeholder {
  position: relative;
  opacity: 1;
  overflow: visible;
}

.c0::-moz-placeholder {
  position: relative;
  opacity: 1;
  overflow: visible;
}

.c0:-ms-input-placeholder {
  position: relative;
  opacity: 1;
  overflow: visible;
}

.c0::placeholder {
  position: relative;
  opacity: 1;
  overflow: visible;
}

.c0:active,
.c0:focus {
  outline: none;
}

.c0[type="search"] {
  box-sizing: border-box;
  text-align: left;
  border-radius: 100px;
  background-color: rgb(255,255,255);
}

<input
  className="c0"
/>
`;

exports[`<Input /> should render its css w/ props landing 1`] = `
.c0 {
  display: block;
  box-sizing: border-box;
  width: 100%;
  text-align: left;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 6px 13px;
  border: 1px solid;
  background-color: rgb(255,255,255);
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  margin-bottom: 12px;
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: white;
  background-image: none;
  padding: 6px 13px 6px 13px;
  border: none;
  border-radius: 3px;
}

.c0::-webkit-input-placeholder {
  position: relative;
  opacity: 1;
  overflow: visible;
}

.c0::-moz-placeholder {
  position: relative;
  opacity: 1;
  overflow: visible;
}

.c0:-ms-input-placeholder {
  position: relative;
  opacity: 1;
  overflow: visible;
}

.c0::placeholder {
  position: relative;
  opacity: 1;
  overflow: visible;
}

.c0:active,
.c0:focus {
  outline: none;
}

.c0[type="search"] {
  box-sizing: border-box;
  text-align: left;
  border-radius: 100px;
  background-color: rgb(255,255,255);
}

.c0::-webkit-input-placeholder {
  position: relative;
  color: rgba(0,0,0,0.3);
  opacity: 1;
  overflow: visible;
}

.c0::-moz-placeholder {
  position: relative;
  color: rgba(0,0,0,0.3);
  opacity: 1;
  overflow: visible;
}

.c0:-ms-input-placeholder {
  position: relative;
  color: rgba(0,0,0,0.3);
  opacity: 1;
  overflow: visible;
}

.c0::placeholder {
  position: relative;
  color: rgba(0,0,0,0.3);
  opacity: 1;
  overflow: visible;
}

<input
  className="c0"
/>
`;

exports[`<Input /> should render its css w/ props note 1`] = `
.c0 {
  display: block;
  box-sizing: border-box;
  width: 100%;
  text-align: left;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 6px 13px;
  border: 1px solid;
  background-color: rgb(255,255,255);
  color: rgb(78,78,78);
  background-color: #FFFDDE;
  border-color: #D5D3C1;
}

.c0::-webkit-input-placeholder {
  position: relative;
  color: #D5D3C1;
  opacity: 1;
  overflow: visible;
}

.c0::-moz-placeholder {
  position: relative;
  color: #D5D3C1;
  opacity: 1;
  overflow: visible;
}

.c0:-ms-input-placeholder {
  position: relative;
  color: #D5D3C1;
  opacity: 1;
  overflow: visible;
}

.c0::placeholder {
  position: relative;
  color: #D5D3C1;
  opacity: 1;
  overflow: visible;
}

.c0:active,
.c0:focus {
  outline: none;
}

.c0[type="search"] {
  box-sizing: border-box;
  text-align: left;
  border-radius: 100px;
  background-color: rgb(255,255,255);
}

<input
  className="c0"
/>
`;

exports[`<Input /> should render its css w/ props theme 1`] = `
.c0 {
  display: block;
  box-sizing: border-box;
  color: #111111;
  width: 100%;
  text-align: left;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 6px 13px;
  border: 1px solid #333333;
  background-color: rgb(255,255,255);
}

.c0::-webkit-input-placeholder {
  position: relative;
  color: #ffffff;
  opacity: 1;
  overflow: visible;
}

.c0::-moz-placeholder {
  position: relative;
  color: #ffffff;
  opacity: 1;
  overflow: visible;
}

.c0:-ms-input-placeholder {
  position: relative;
  color: #ffffff;
  opacity: 1;
  overflow: visible;
}

.c0::placeholder {
  position: relative;
  color: #ffffff;
  opacity: 1;
  overflow: visible;
}

.c0:active,
.c0:focus {
  outline: none;
}

.c0[type="search"] {
  box-sizing: border-box;
  text-align: left;
  border-radius: 80px;
  background-color: rgb(255,255,255);
}

<input
  className="c0"
/>
`;
